# color-correction-toolkit

./: .clang-format  CLAUDE.md  CMakeLists.txt  DEVELOPMENT_PLAN.md  Makefile  Variant_1.md  Variant_2.md  Variant_3.md  Variant_4.md
docs/: conventions.md  git.md  logging.md  testing.md
docs/brd/: brd.md
modules/color_correction/: CMakeLists.txt
modules/color_correction/apps/: CMakeLists.txt  calibration_app.cpp  correction_app.cpp
modules/color_correction/config/: default_config.toml
modules/color_correction/interface/: ColorCorrectionAPI.hpp  ICalibrationManager.hpp  IColorCorrector.hpp  IConfiguration.hpp
modules/color_correction/internal/correction/: BatchProcessor.cpp  BatchProcessor.hpp  LinearCorrector.cpp  LinearCorrector.hpp
modules/color_correction/internal/detection/: ContourDetector.cpp  ContourDetector.hpp  DetectionValidator.cpp  DetectionValidator.hpp  IDetector.hpp  MCCDetector.cpp  MCCDetector.hpp  MultiLevelDetector.cpp  MultiLevelDetector.hpp  TemplateDetector.cpp  TemplateDetector.hpp
modules/color_correction/internal/domain/: CalibrationData.cpp  CalibrationData.hpp  ColorPatch.cpp  ColorPatch.hpp  CorrectionMatrix.cpp  CorrectionMatrix.hpp  DetectionResult.cpp  DetectionResult.hpp
modules/color_correction/internal/processing/: ColorSpaceConverter.cpp  ColorSpaceConverter.hpp  CorrectionMatrixCalculator.cpp  CorrectionMatrixCalculator.hpp  ImagePreprocessor.cpp  ImagePreprocessor.hpp  QualityMetrics.cpp  QualityMetrics.hpp  StatisticalProcessor.cpp  StatisticalProcessor.hpp
modules/color_correction/tests/: CMakeLists.txt
modules/shared/: CMakeLists.txt
modules/shared/types/: CMakeLists.txt  Common.hpp
modules/shared/utils/: CMakeLists.txt  Logger.hpp
modules/tools/: CMakeLists.txt
